@startuml
'https://plantuml.com/class-diagram


abstract class PlaneFactory
class MobEnemyFactory
class EliteEnemyFactory
class BossEnemyFactory

class MobEnemy
class EliteEnemy
class Bossenemy


PlaneFactory <|-- MobEnemyFactory
PlaneFactory <|-- EliteEnemyFactory
PlaneFactory <|-- BossEnemyFactory

AbstractAircraft <.. PlaneFactory

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Bossenemy

MobEnemy <.. MobEnemyFactory : create
EliteEnemy <.. EliteEnemyFactory : create
Bossenemy <.. BossEnemyFactory : create




class AbstractAircraft{
    # axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}
class PlaneFactory{
    +createAircraft():AbstractAircraft
}

class MobEnemyFactory{
    +createAircraft():AbstractAircraft
}
class EliteEnemyFactory{
    +createAircraft():AbstractAircraft
}
class BossEnemyFactory{
    +createAircraft():AbstractAircraft
}

class MobEnemy{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy{
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY,int hp)
    +forward():void
    +shoot():List<Bullet>
}

class Bossenemy{
    +BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<Bullet>
}





@enduml